tests/cases/parser/misc/expresionless_directive.stderr
error: expected an expression
 --> $DIR/expresionless_directive.hash:4:12
3 |   // This directive does not have an expression
4 |   k := #dump;
  |              ^ 

warn: unnecessary trailing semicolon
 --> $DIR/expresionless_directive.hash:4:11
3 |   // This directive does not have an expression
4 |   k := #dump;
  |             ^ remove this semicolon
